--- a/om-mig.css
+++ b/om-mig.css
@@ -41,9 +41,7 @@ p {
 
 /*menu*/
 ul {
-    margin-top: 10rem;
-    /*    centrere menuen på siden*/
-    margin-right: 5rem;
+    margin-top: 8rem;
     width: 100%;
     height: 60px;
 }
@@ -56,6 +54,7 @@ ul li {
     display: inline;
     /*    centere tekst*/
     line-height: 70px;
+    margin-right: 10rem;
 }
 
 /*teksten inde i menuen*/
@@ -73,10 +72,10 @@ ul li a {
     margin-top: -3rem;
 }
 
-/*hover effekt over menuen */
+/*hover effekt over menuen*/
 ul li a span:hover {
     background-color: rgb(233, 237, 200);
-    animation: pulse 2s;
+    animation: pulse 1s;
     color: #6A7E6F;
 }
 
@@ -87,7 +86,7 @@ ul li a span:hover {
     }
 
     50% {
-        transform: scale(2);
+        transform: scale(1.1);
     }
 
     100% {
@@ -96,6 +95,11 @@ ul li a span:hover {
 }
 
 /*burger menu*/
+#menu-bar {
+    position: absolute;
+    margin-top: -3rem;
+}
+
 #menu {
     width: 35px;
     height: 30px;
@@ -167,7 +171,7 @@ ul li a span:hover {
     grid-row-gap: 1vw;
     grid-column-gap: 1vw;
     padding: 1vw;
-    margin-top: 2rem;
+    margin-top: 1rem;
     margin-left: 4rem;
     background-color: rgba(210, 105, 30, 0.38);
     text-align: center;
@@ -196,8 +200,8 @@ ul li a span:hover {
 
 h1 {
     position: absolute;
-    top: 6rem;
-    left: 40rem;
+    top: 7vw;
+    left: 44vw;
 }
 
 /*tekst grid*/
@@ -216,27 +220,161 @@ h1 {
     text-align: center;
 }
 
-text {
-    line-height: 1.5em;
-}
-
 br {
     margin-bottom: 1rem;
 }
 
 /*responsive*/
-@media (max-width: 593px) {
-    h1 {
-        font-size: 2rem;
-
+@media (max-width: 1260px) {
+    #skilt {
+        width: 18vw;
     }
 
+    h1 {
+        margin-top: 1vw;
+    }
+
+    #container {
+        margin-left: 58vw;
+    }
+
+    #tekst {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 1170px) {
+    #foto_album {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        margin-left: 16vw;
+    }
+
+    #foto {
+        width: 11.9vw;
+    }
+
+    #foto:hover {
+        transform: scale(1.4);
+    }
+
+    h1 {
+        left: 43vw;
+    }
+
+    #container {
+        margin-left: 52vw;
+        margin-right: 20vw;
+    }
+}
+
+@media (max-width: 1019px) {
+    h1 {
+        font-size: 1.5rem;
+        left: 44vw;
+    }
+
+    #tekst {
+        font-size: 0.9rem;
+    }
+
+    #container {
+        margin-top: -36.4rem;
+    }
+}
+
+@media (max-width: 780px) {
+    #foto_album {
+        margin-left: 18vw;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    #foto {
+        width: 14vw;
+    }
+
+    #container {
+        margin-top: -19.5rem;
+        margin-left: 27.2vw;
+        margin-right: 26.6vw;
+    }
+
+    #tekst {
+        font-size: 0.8rem;
+    }
+
+    h1 {
+        font-size: 1.2rem;
+    }
+
+    /*
+    ul li a {
+        padding: 0 2px;
+        font-size: 1rem;
+    }
+
+    ul {
+        margin-left: 2vw;
+    }
+*/
+}
+
+@media (max-width: 623px) {
+    #skilt {
+        width: 20vw;
+        margin-right: 38vw;
+    }
+
+    #foto {
+        width: 17vw;
+    }
+
+    #foto_album {
+        margin-left: 12vw;
+    }
+
+    #container {
+        margin-top: -20.5rem;
+        margin-left: 23.6vw;
+        margin-right: 21vw;
+    }
+}
+
+@media (max-width: 593px) {
     #menu {
         margin-left: 6rem;
-        margin-top: -1.5rem;
     }
 
-    ul li a {
-        padding: 0 60px;
+    #skilt {
+        display: none;
+    }
+
+    #menu-bar {
+        margin-top: 5rem;
+    }
+
+    h1 {
+        font-size: 2rem;
+        color: #c7aac3;
+        font-family: 'Lobster Two', cursive;
+        text-align: center;
+        margin-top: -6vw;
+    }
+
+    #foto_album {
+        grid-template-columns: 1fr;
+        margin-left: 1vw;
+        margin-top: 22vw;
+    }
+
+    #container {
+        margin-top: -38.6rem;
+        margin-left: 40vw;
+        margin-right: 20vw;
+    }
+
+    #tekst {
+        font-size: 0.8rem;
     }
 }
