--- a/om-mig.css
+++ b/om-mig.css
@@ -63,7 +63,7 @@ ul li a {
     /*    fjerner underline*/
     text-decoration: none;
     font-size: 1.5rem;
-    font-weight: 1000;
+    font-weight: 900;
     font-family: 'Amatic SC', cursive;
     color: sandybrown;
     float: left;
@@ -310,17 +310,6 @@ br {
     h1 {
         font-size: 1.2rem;
     }
-
-    /*
-    ul li a {
-        padding: 0 2px;
-        font-size: 1rem;
-    }
-
-    ul {
-        margin-left: 2vw;
-    }
-*/
 }
 
 @media (max-width: 623px) {
@@ -329,7 +318,7 @@ br {
         margin-right: 38vw;
     }
 
-    #foto {
+    .foto {
         width: 17vw;
     }
 
