--- a/om-mig.css
+++ b/om-mig.css
@@ -161,27 +161,82 @@ ul li a span:hover {
 }
 
 /*foto album grid*/
-#foto_album {
+.om_mig {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    float: left;
-    margin: 1rem;
-    grid-row-gap: 1vw;
-    grid-column-gap: 1vw;
+    grid-template-columns: 0fr 0fr 0fr 1fr;
+    grid-template-rows: 0fr 0fr;
+    grid-gap: 1vw;
     padding: 1vw;
-    margin-top: 1rem;
-    margin-left: 4rem;
-    background-color: rgba(210, 105, 30, 0.38);
     text-align: center;
+    background-color: rgba(210, 105, 30, 0.23);
+    margin-top: 0.5rem;
+    margin-right: 10vw;
+    margin-left: 10vw;
 }
 
-#foto {
+#foto1 {
     width: 14vw;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
-#foto:hover {
+#foto2 {
+    width: 14vw;
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+#foto3 {
+    width: 14vw;
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+
+#foto4 {
+    width: 14vw;
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+#foto5 {
+    width: 14vw;
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+#foto6 {
+    width: 14vw;
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+
+#foto1:hover {
     transform: scale(1.6);
+}
+
+#foto2:hover {
+    transform: scale(1.6);
+}
+
+#foto3:hover {
+    transform: scale(1.6);
+}
+
+#foto4:hover {
+    transform: scale(1.6);
+}
+
+#foto5:hover {
+    transform: scale(1.6);
+}
+
+#foto6:hover {
+    transform: scale(1.6);
+}
+
+#om_mig_tekst {
+    grid-column: 4/5;
+    grid-row: 1/3;
 }
 
 /*skilt*/
@@ -203,26 +258,6 @@ h1 {
     left: 44vw;
 }
 
-/*tekst grid*/
-#container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    float: right;
-    margin: 1rem;
-    grid-row-gap: 1vw;
-    padding: 1vw;
-    margin-top: -34.4rem;
-    margin-left: 52rem;
-    margin-right: 9rem;
-    background-color: rgba(170, 198, 177, 0.33);
-    text-align: center;
-}
-
-br {
-    margin-bottom: 1rem;
-}
-
 /*responsive*/
 @media (max-width: 1260px) {
     #skilt {
@@ -233,41 +268,61 @@ br {
         margin-top: 1vw;
     }
 
-    #container {
-        margin-left: 58vw;
-    }
-
     #tekst {
         font-size: 1rem;
+    }
+
+    .om_mig {
+        display: grid;
+        grid-template-columns: 0fr 0fr 1fr;
+        grid-template-rows: 0fr 0fr 0fr;
+    }
+
+    #foto1 {
+        width: 10vw;
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+
+    #foto2 {
+        width: 10vw;
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+
+    #foto3 {
+        width: 10vw;
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+
+    #foto4 {
+        width: 10vw;
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+
+    #foto5 {
+        width: 10vw;
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+
+    #foto6 {
+        width: 10vw;
+        grid-column: 2/3;
+        grid-row: 3/4;
+    }
+
+    #om_mig_tekst {
+        grid-column: 3/4;
+        grid-row: 1/4;
     }
 }
 
 @media (max-width: 1170px) {
-    #foto_album {
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-        margin-left: 16vw;
-    }
-
-    #foto {
-        width: 11.9vw;
-    }
-
-    #foto:hover {
-        transform: scale(1.4);
-    }
-
     h1 {
         left: 43vw;
-    }
-
-    #container {
-        margin-left: 52vw;
-        margin-right: 20vw;
-    }
-
-    #menu-bar {
-        margin-top: 0.5rem;
     }
 }
 
@@ -277,36 +332,20 @@ br {
         left: 44vw;
     }
 
-    #tekst {
-        font-size: 0.9rem;
+    p {
+        font-size: 1.8vw;
     }
 
     #container {
         margin-top: -36.4rem;
     }
+
+    #menu-bar {
+        margin-top: 1vw;
+    }
 }
 
 @media (max-width: 780px) {
-    #foto_album {
-        margin-left: 18vw;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-    }
-
-    #foto {
-        width: 14vw;
-    }
-
-    #container {
-        margin-top: -19.5rem;
-        margin-left: 27.2vw;
-        margin-right: 26.6vw;
-    }
-
-    #tekst {
-        font-size: 0.8rem;
-    }
-
     h1 {
         font-size: 1.2rem;
     }
@@ -354,19 +393,77 @@ br {
         margin-top: -6vw;
     }
 
-    #foto_album {
-        grid-template-columns: 1fr;
-        margin-left: 1vw;
-        margin-top: 22vw;
+    p {
+        font-size: 3vw;
     }
 
-    #container {
-        margin-top: -38.6rem;
-        margin-left: 40vw;
-        margin-right: 20vw;
+    /*    baggrund billeder*/
+    #right {
+        height: 45rem;
+        margin-top: -10vw;
     }
 
-    #tekst {
-        font-size: 0.8rem;
+    #left {
+        height: 45rem;
+        margin-top: -10vw;
+    }
+
+    .om_mig {
+        display: grid;
+        grid-template-columns: 0fr 1fr;
+        grid-template-rows: 0fr 0fr 0fr 0fr 0fr 0fr;
+        margin-top: 10vw;
+        margin-right: 15vw;
+        margin-left: 15vw;
+    }
+
+    #menu-bar {
+        margin-top: 7vw;
+    }
+
+    #foto1 {
+        width: 18vw;
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+
+    #foto2 {
+        width: 18vw;
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+
+    #foto3 {
+        width: 18vw;
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+
+    #foto4 {
+        width: 18vw;
+        grid-column: 1/2;
+        grid-row: 4/5;
+    }
+
+    #foto5 {
+        width: 18vw;
+        grid-column: 1/2;
+        grid-row: 5/6;
+    }
+
+    #foto6 {
+        width: 18vw;
+        grid-column: 1/2;
+        grid-row: 6/7;
+    }
+
+    #om_mig_tekst {
+        grid-column: 2/3;
+        grid-row: 1/7;
+    }
+
+    /*    lav hover størrelse større*/
+    .foto:hover {
+        transform: scale(1.4);
     }
 }
